- Prevent image overflow in landing page theme note editor

--- a/RockWeb/Themes/LandingPages/Styles/theme.less
+++ b/RockWeb/Themes/LandingPages/Styles/theme.less
@@ -363,6 +363,14 @@
 // Theme Utility Classes
 //
 
+#zone-main.pop-content .note-editor {
+  img,
+  .split {
+    max-width: 100%;
+    margin: 16px 0;
+  }
+}
+
 // Hide zones if they're empty
 .zone-instance {
   > .zone-content {
